--- a/_includes/codeTable.html
+++ b/_includes/codeTable.html
@@ -306,7 +306,7 @@
           <p>Version: {{ release.version }}</p>
         {% endif %}
         <p>{{ site.CodeCreated[page.lang] }}: {{ release.date.created }}</p>
-        <p>{{ site.MetadataLastUpdatedCode[page.lang] }}: {{ release.date.metadataLastUpdated }}</p>
+        <p>{{ site.LastUpdatedCode[page.lang] }}: {{ release.date.metadataLastUpdated }}</p>
 
         <h3>Contact</h3>
         {% if release.contact.name != nil %}
