--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -9,7 +9,7 @@
           
   <h2>{{ site.AdminCodeForm[page.lang] }}</h2>
     <div class="form-group">
-      <label for="adminCode" class="required">adminCode <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="adminCode" class="required">adminCode <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <select class="form-control" id="adminCode" name="adminCode" required="required">
         <option value="">&nbsp;</option>
         {% for adminsLevel in site.data.administrations %}
@@ -32,7 +32,7 @@
       <input class="form-control" id="frUrlContact" name="frUrlContact" type="url" required="required"/>
     </div>
     <div class="form-group">
-      <label for="emailContact" class="required" >email <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="emailContact" class="required" >email <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="emailContact" name="emailContact" type="email" required="required" />
     </div>
     <div class="form-group">
@@ -47,7 +47,7 @@
   <h2>{{ site.DateCodeForm[page.lang] }}</h2>
   <h3>date:</h3>
     <div class="form-group">
-      <label for="dateCreated" class="required">created <strong class="required">({{ site.RequiredField[page.lang] }})</strong><span class="datepicker-format"> (YYYY-MM-DD)</span></label>
+      <label for="dateCreated" class="required">created <strong class="required">({{ site.MandatoryField[page.lang] }})</strong><span class="datepicker-format"> (YYYY-MM-DD)</span></label>
       <input class="form-control" id="dateCreated" name="dateCreated" type="date" data-rule-dateISO="true" required="required" />
     </div>
     <div class="form-group">
@@ -55,16 +55,16 @@
       <input class="form-control" id="dateLastModified" name="dateLastModified" type="date" data-rule-dateISO="true" />
     </div>
     <div class="form-group">
-      <label for="dateLastUpdated" class="required">metadataLastUpdated <strong class="required">({{ site.RequiredField[page.lang] }})</strong><span class="datepicker-format"> (YYYY-MM-DD)</span></label>
+      <label for="dateLastUpdated" class="required">metadataLastUpdated <strong class="required">({{ site.MandatoryField[page.lang] }})</strong><span class="datepicker-format"> (YYYY-MM-DD)</span></label>
       <input class="form-control" id="dateLastUpdated" name="dateLastUpdated" type="date" data-rule-dateISO="true" required="required"/>
     </div>
   
   <h2>{{ site.DescriptionCodeDesc[page.lang] | split: "." }}</h2>
     <div class="form-group">
-      <label for="enDescription" class="required">English description <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="enDescription" class="required">English description <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="enDescription" name="enDescription" type="text" pattern="[A-Za-z\s]" data-rule-lettersonly="true" required="required"/>
     
-      <label for="frDescription" class="required">French Description <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="frDescription" class="required">French Description <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="frDescription" name="frDescription" type="text" pattern="[A-Za-z\s]" data-rule-lettersonly="true" required="required"/>
     </div>
   
@@ -113,10 +113,10 @@
   
   <h2>{{ site.NameCodeDesc[page.lang] | split: "." }}</h2>
     <div class="form-group">
-      <label for="enProjectName" class="required">English name <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="enProjectName" class="required">English name <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="enProjectName" name="enProjectName" type="text" pattern="[A-Za-z\s]" data-rule-lettersonly="true" required="required"/>
       
-      <label for="frProjectName" class="required">French name <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="frProjectName" class="required">French name <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="frProjectName" name="frProjectName" type="text" pattern="[A-Za-z\s]" data-rule-lettersonly="true" required="required"/>
     </div>
   
@@ -153,23 +153,23 @@
   <h2>{{ site.LicenseCodeForm[page.lang] }}</h2>
   <h3>licenses:</h3>	
     <div class="form-group">
-      <label for="enUrlLicense" class="required" >English URL <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="enUrlLicense" class="required" >English URL <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="enUrlLicense" name="enUrlLicense" type="url" required="required"/>
   
-      <label for="frUrlLicense" class="required">French URL <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="frUrlLicense" class="required">French URL <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="frUrlLicense" name="frUrlLicense" type="url" required="required"/>
     </div>
     <div class="form-group">
-      <label for="spdxID" class="required" >spdxID <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="spdxID" class="required" >spdxID <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="spdxID" name="spdxID" type="text"  required="required"/>
     </div>
   
   <h2>{{ site.RepositoryURLDesc[page.lang] | split: "." }}</h2>
     <div class="form-group">
-      <label for="enRepoUrl" class="required">English repositoryURL <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="enRepoUrl" class="required">English repositoryURL <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="enRepoUrl" name="enRepoUrl" type="url" required="required"/>
       
-      <label for="frRepoUrl" class="required">French repositoryURL <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="frRepoUrl" class="required">French repositoryURL <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="frRepoUrl" name="frRepoUrl" type="url" required="required"/>
     </div>
   
@@ -216,9 +216,9 @@
   
   <h2>{{ site.TagsCodeDesc[page.lang] | split: "." }}</h2>
     <div id="tags" class="form-group">
-      <label for="enTag" class="required">English tag <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="enTag" class="required">English tag <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="enTag" name="tag" type="text" required="required"/>
-      <label for="frTag" class="required">French tag <strong class="required">({{ site.RequiredField[page.lang] }})</strong></label>
+      <label for="frTag" class="required">French tag <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
       <input class="form-control" id="frTag" name="frTag" type="text" required="required"/>
     </div>
     <button type="button" class="btn btn-default" onclick = "addMoreTags()">Add more tags</button>
