--- a/_includes/header.html
+++ b/_includes/header.html
@@ -92,7 +92,7 @@
             {% endif %}
           {% endif %}
 
-          {% if page.ref == "codeGroups" %}
+          {% if page.ref == "codeGroups" or page.ref == "codeSchema" %}
             {% if page.lang == "en" %}
               <li><a href="./open-source-code.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
             {% else %}
@@ -100,13 +100,6 @@
             {% endif %}
           {% endif %}
 
-          {% if page.ref == "codeSchema" %}
-            {% if page.lang == "en" %}
-              <li><a href="./open-source-code.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
-            {% else %}
-              <li><a href="./code-source-ouvert.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
-            {% endif %}
-          {% endif %}
         </ol>
       </div>
     </div>
