--- a/_includes/header.html
+++ b/_includes/header.html
@@ -91,6 +91,15 @@
               <li><a href="./index.html">{{ site.title[page.lang] }}</a></li>
             {% endif %}
           {% endif %}
+
+          {% if page.ref == "codeGroups" or page.ref == "codeSchema" %}
+            {% if page.lang == "en" %}
+              <li><a href="./open-source-code.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
+            {% else %}
+              <li><a href="./code-source-ouvert.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
+            {% endif %}
+          {% endif %}
+
         </ol>
       </div>
     </div>
