--- a/_includes/codeRepoGroups.html
+++ b/_includes/codeRepoGroups.html
@@ -1,11 +1,11 @@
 <div class="row">
-
 <ul class="list-unstyled">
    <li>
-      <details>
-         <summary>Federal</summary>
-         <div class="list-group">
+        <details>
+            <summary>Federal</summary>
+            <div class="list-group">
             {% assign repo_array = "" | split: ','%}
+            {% assign groups_array = "" | split: ','%}
             {% for fptms in site.data.code %}
                 {% assign fptm = fptms[1] %}
                 {% for admins in fptm %}
@@ -17,52 +17,51 @@
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1]  %}
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
+                                    {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2]  %}
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
                                     {% assign repo_array = repo_array | push: org_url %}
+                                    {% assign groups_array = groups_array | push: grp_url %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
                     {% endfor %}
                 {% endfor %}
             {% endfor %}
-           
-           {% assign repo_array = repo_array | sort: "name" | uniq %}
-            {% for repo in repo_array %}
-                {% assign org_name =  repo | split: "/" %}
-                {% if org_name.size == 3  %}
-                <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] }}" target="_blank">
-                    {{ org_name[2] }} 
-                </a>    
-                    <ul>
-                        <li>
-                            {{ org_name[0] }}
-                        </li> 
-                    </ul>
-               
-                {% elsif org_name.size == 4  %}
-               
-                    <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] | append: "/" | append: org_name[3] }}" target="_blank">
-                        {{ org_name[3] }} 
-                    </a>
-                    <ul>
-                        <li>
-                            {{ org_name[0] }}
-                        </li> 
-                    </ul>
-                {% endif %}
-            {% endfor %}            
-         </div>
-      </details>
 
+            {% assign repo_array = repo_array | sort_natural | uniq  %}
+            {% assign groups_array = groups_array | sort_natural | uniq %}
+            {% for grp in groups_array %}
+            {% assign grp_name = grp | split: "/" %}
+                {% if grp_name.size == 2  %}
+                    <a href="{{"https://"| append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+                {% elsif grp_name.size == 3  %}
+                    <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+                {%endif%}   
+                {% for repo in repo_array %}
+                {% assign org_name =  repo | split: "/" %}
+                    {% if repo contains {{grp}} %}
+                        <ul>
+                            <li>
+                                {{org_name[0]}}
+                            </li>
+                        </ul>
+                    {%endif%}
+                {% endfor %}
+            {% endfor %}
+            </div>
+        </details>
    </li>
    <li>
-      <details>
-         <summary>Provincial</summary>
+        <details>
+        <summary>Provincial</summary>
         <div class="list-group">
             {% assign repo_array = "" | split: ','%}
+            {% assign groups_array = "" | split: ','%}
             {% for fptms in site.data.code %}
                 {% assign fptm = fptms[1] %}
                 {% for admins in fptm %}
@@ -74,52 +73,51 @@
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1]  %}
+                                     {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
+                                    {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2]  %}
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
                                     {% assign repo_array = repo_array | push: org_url %}
+                                    {% assign groups_array = groups_array | push: grp_url %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
                     {% endfor %}
                 {% endfor %}
             {% endfor %}
-            
-            {% assign repo_array = repo_array | sort: "name" | uniq %}
-            {% for repo in repo_array %}
-                {% assign org_name =  repo | split: "/" %}
-                {% if org_name.size == 3  %}
-                <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] }}" target="_blank">
-                    {{ org_name[2] }} 
-                </a>    
-                    <ul>
-                        <li>
-                            {{ org_name[0] }}
-                        </li> 
-                    </ul>
-               
-                {% elsif org_name.size == 4  %}
-               
-                    <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] | append: "/" | append: org_name[3] }}" target="_blank">
-                        {{ org_name[3] }} 
-                    </a>
-                    <ul>
-                        <li>
-                            {{ org_name[0] }}
-                        </li> 
-                    </ul>
-                {% endif %}
-            {% endfor %}         
-         </div>
-      </details>
 
+            {% assign repo_array = repo_array | sort_natural | uniq  %}
+            {% assign groups_array = groups_array | sort_natural | uniq %}
+            {% for grp in groups_array %}
+            {% assign grp_name = grp | split: "/" %}
+                {% if grp_name.size == 2  %}
+                    <a href="{{"https://"| append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+                {% elsif grp_name.size == 3  %}
+                    <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+                {%endif%}   
+                {% for repo in repo_array %}
+                {% assign org_name =  repo | split: "/" %}
+                    {% if repo contains {{grp}} %}
+                        <ul>
+                            <li>
+                                {{org_name[0]}}
+                            </li>
+                        </ul>
+                    {%endif%}
+                {% endfor %}
+            {% endfor %}
+            </div>
+        </details>
    </li>
    <li>
-      <details>
-      <summary>Municipal</summary>
-     <div class="list-group">
+        <details>
+            <summary>Municipal</summary>
+                <div class="list-group">
             {% assign repo_array = "" | split: ','%}
+            {% assign groups_array = "" | split: ','%}
             {% for fptms in site.data.code %}
                 {% assign fptm = fptms[1] %}
                 {% for admins in fptm %}
@@ -131,45 +129,44 @@
                                 {% assign repo_url =  release.repositoryURL[page.lang] | remove: "https://"  | split: "/" %}
                                 {% assign repo_size =  repo_url | size %}
                                 {% if repo_size == 3  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1]  %}
+                                     {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[1] | append: "/" |  append: repo_url[0]  %}
                                     {% assign repo_array = repo_array | push: org_url%}
+                                    {% assign groups_array = groups_array | push: grp_url %}
                                     {% elsif repo_size == 4  %}
-                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[0] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[2]  %}
+                                    {% assign org_url =  aName[0].name[page.lang] | append: "/" | append: repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0]  %}
+                                    {% assign grp_url =  repo_url[2] | append: "/" |  append: repo_url[1] | append: "/" |  append: repo_url[0] %}
                                     {% assign repo_array = repo_array | push: org_url %}
+                                    {% assign groups_array = groups_array | push: grp_url %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
                     {% endfor %}
                 {% endfor %}
             {% endfor %}
-            {% assign repo_array = repo_array | sort: "name" | uniq %}
-            {% for repo in repo_array %}
+
+            {% assign repo_array = repo_array | sort_natural | uniq  %}
+            {% assign groups_array = groups_array | sort_natural | uniq %}
+            {% for grp in groups_array %}
+            {% assign grp_name = grp | split: "/" %}
+                {% if grp_name.size == 2  %}
+                    <a href="{{"https://"| append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+                {% elsif grp_name.size == 3  %}
+                    <a href="{{"https://"| append: grp_name[2] | append: "/" |  append: grp_name[1] | append: "/" |  append: grp_name[0] }}" target="_blank">{{grp_name[0]}}</a>
+                {%endif%}   
+                {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
-                {% if org_name.size == 3  %}
-                <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] }}" target="_blank">
-                    {{ org_name[2] }} 
-                </a>    
-                    <ul>
-                        <li>
-                            {{ org_name[0] }}
-                        </li> 
-                    </ul>
-               
-                {% elsif org_name.size == 4  %}
-               
-                    <a href="{{"https://"| append: org_name[1] | append: "/" | append: org_name[2] | append: "/" | append: org_name[3] }}" target="_blank">
-                        {{ org_name[3] }} 
-                    </a>
-                    <ul>
-                        <li>
-                            {{ org_name[0] }}
-                        </li> 
-                    </ul>
-                {% endif %}
-            {% endfor %}         
-         </div>
-      </details>
+                    {% if repo contains {{grp}} %}
+                        <ul>
+                            <li>
+                                {{org_name[0]}}
+                            </li>
+                        </ul>
+                    {%endif%}
+                {% endfor %}
+            {% endfor %}
+            </div>
+        </details>
    </li>
 </ul>
-
 </div>
