--- a/_includes/codeRepoGroups.html
+++ b/_includes/codeRepoGroups.html
@@ -33,8 +33,8 @@
                 {% endfor %}
             {% endfor %}
 
-            {% assign repo_array = repo_array | sort | uniq  %}
-            {% assign groups_array = groups_array | sort | uniq %}
+            {% assign repo_array = repo_array | uniq  %}
+            {% assign groups_array = groups_array | uniq %}
             {% for grp in groups_array %}
             {% assign grp_name = grp | split: "/" %}
                 {% if grp_name.size == 2  %}
@@ -89,8 +89,8 @@
                 {% endfor %}
             {% endfor %}
             
-            {% assign repo_array = repo_array | sort | uniq  %}
-            {% assign groups_array = groups_array | sort | uniq %}
+            {% assign repo_array = repo_array | uniq  %}
+            {% assign groups_array = groups_array | uniq %}
             {% for grp in groups_array %}
             {% assign grp_name = grp | split: "/" %}
                 {% if grp_name.size == 2  %}
@@ -145,8 +145,8 @@
                 {% endfor %}
             {% endfor %}
 
-            {% assign repo_array = repo_array | sort | uniq  %}
-            {% assign groups_array = groups_array | sort | uniq %}
+            {% assign repo_array = repo_array | uniq  %}
+            {% assign groups_array = groups_array | uniq %}
             {% for grp in groups_array %}
             {% assign grp_name = grp | split: "/" %}
                 {% if grp_name.size == 2  %}
@@ -157,7 +157,7 @@
                 {% for repo in repo_array %}
                 {% assign org_name =  repo | split: "/" %}
                     {% if repo contains {{grp}} %}
-                            <ul>
+                        <ul>
                             <li>
                                 {{org_name[0]}}
                             </li>
