--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
     <div class="container nvbar">
       <h2 class="wb-inv">Menu</h2>
       <button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Main </span>Menu <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
-      <ul role="menu" aria-orientation="vertical" data-ajax-replace="../../../ajax/sitemenu-v2-en.html">
+      <ul role="menu" aria-orientation="vertical">
         {% if page.lang == "en" %}
           <li role="presentation"><a role="menuitem" href="./index.html">{{ site.title[page.lang] }}</a></li>
           <li role="presentation"><a role="menuitem" href="./open-source-code.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
