call the sendReq function to return all datas from code.json and save them in dataCode variable

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -93,9 +93,13 @@
 <script>
 
   var selectedAdminCode = "";
+  var dataCode; 
 
   $('#adminCode').change(function() {
     selectedAdminCode = document.getElementById("adminCode").value;
+    sendReq("https://canada-ca.github.io/ore-ero/code.json", function processResponse(response){
+      dataCode = JSON.parse(response);    
+    });
   });
 
   function sendReq(url, callbackFunction){
