reset the list of projectName when we choose a new administration

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -99,6 +99,8 @@
     selectedAdminCode = document.getElementById("adminCode").value;
     sendReq("https://canada-ca.github.io/ore-ero/code.json", function processResponse(response){
       dataCode = JSON.parse(response);
+      $('#enProjectName').val('');
+      $('#enlistOfAdminProjects').empty();
 
       let element = document.getElementById("enlistOfAdminProjects");
       if(dataCode.federal[chosenCodeAdmin] === undefined)
