--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -103,10 +103,10 @@
       $('#enlistOfAdminProjects').empty();
 
       let element = document.getElementById("enlistOfAdminProjects");
-      if(dataCode.federal[chosenCodeAdmin] === undefined)
+      if(dataCode.federal[selectedAdminCode] === undefined)
         console.log("The selected administration does not exist in _data.");
       else{
-        dataCode.federal[chosenCodeAdmin].releases.forEach(function(project){
+        dataCode.federal[selectedAdminCode].releases.forEach(function(project){
           let option = document.createElement("OPTION");
           element.appendChild(option);
           option.setAttribute("label", project.name["en"]);
@@ -119,7 +119,7 @@
   $('#enProjectName').change(function(){
     var pName = document.getElementById("enProjectName").value;
     
-    dataCode.federal[chosenCodeAdmin].releases.forEach(function(project){
+    dataCode.federal[selectedAdminCode].releases.forEach(function(project){
       if(project.name["en"] == pName){
         console.log("The URL of the chosen project" + project.repositoryURL["en"]);
       }
