--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -100,9 +100,9 @@
     sendReq("https://canada-ca.github.io/ore-ero/code.json", function processResponse(response){
       dataCode = JSON.parse(response);
       $('#enProjectName').val('');
-      $('#enlistOfAdminProjects').empty();
+      $('#enListOfAdminProjects').empty();
 
-      let element = document.getElementById("enlistOfAdminProjects");
+      let element = document.getElementById("enListOfAdminProjects");
       if(dataCode.federal[selectedAdminCode] === undefined)
         console.log("The selected administration does not exist in _data.");
       else{
